<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSideMenuContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp">


                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/profile" />

                    <LinearLayout
                        android:id="@+id/lyUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_toEndOf="@id/ivProfile"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Welcome"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="Tony Roshdy"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/arrow" />

                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/llDrawerExplore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:id="@+id/ivExploreSelected"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/selected" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/explore" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:lines="1"
                        android:text="@string/explore"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDrawerLiveChat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:id="@+id/ivLiveChatSelected"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/selected"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/live" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:lines="1"
                        android:text="@string/live_chat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDrawerGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:id="@+id/ivGallerySelected"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/selected"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/gallery" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:lines="1"
                        android:text="@string/gallery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDrawerWishList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:id="@+id/ivWishListSelected"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/selected"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/wishlist" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:lines="1"
                        android:text="@string/wish_list"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDrawerE_magazine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:id="@+id/ivE_magazineSelected"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/selected"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/book" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:lines="1"
                        android:text="@string/e_magazine"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
